--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="page">
     <main class="content">
       <section class="result">
-        <div class="result__video-container">
+        <div class="result__video-container">   
           <video src="" controls class="result__video" poster=""></video>
         </div>
         <form class="search-form">
@@ -39,7 +39,9 @@
                   value="morning"
                   class="search-form__checkbox visually-hidden"
                 />
-                <span class="search-form__pseudo-checkbox"></span>
+                <span class="search-form__pseudo-checkbox">
+                  <span class="search-form__pseudo-checkbox active"></span>
+                </span>
                 <span class="search-form__label-text">Утро</span>
               </label>
               <label class="search-form__label">
@@ -49,7 +51,9 @@
                   value="afternoon"
                   class="search-form__checkbox visually-hidden"
                 />
-                <span class="search-form__pseudo-checkbox"></span>
+                <span class="search-form__pseudo-checkbox">
+                  <span class="search-form__pseudo-checkbox active"></span>
+                </span>
                 <span class="search-form__label-text">День</span>
               </label>
               <label class="search-form__label">
@@ -59,7 +63,9 @@
                   value="night"
                   class="search-form__checkbox visually-hidden"
                 />
-                <span class="search-form__pseudo-checkbox"></span>
+                <span class="search-form__pseudo-checkbox">
+                  <span class="search-form__pseudo-checkbox active"></span>
+                </span>
                 <span class="search-form__label-text">Ночь</span>
               </label>
             </div>
